# Parallel-Genetic-Algorithm-for-Finding-Roots-of-Complex-Polynomials

./: README.md
PGA/: Local.cpp  Local.h  README.md  main.cpp
PGA/Processes/: Master.cpp  Master.h  Process.cpp  Process.h  Worker.cpp  Worker.h
PGA/World/: Polynomial.cpp  Polynomial.h  Population.cpp  Population.h
SGA/: CMakeLists.txt  Local.cpp  Local.h  README.md  Worker.cpp  Worker.h  main.cpp
SGA/World/: Individual.cpp  Individual.h  Population.cpp  Population.h
